c/examples/writing-a-c-compiler-tests/tests/chapter_5/valid/local_var_missing_return.c
int main(void) {
    int a = 3;
    a = a + 5;
}