c/examples/writing-a-c-compiler-tests/tests/chapter_5/invalid_semantics/undeclared_var_compare.c
int main(void) {
    return a < 5;
}